<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UPR: Remote</string>
    <string name="login_name">Universal Presenter Remote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_button">About</string>
    <string name="login_instructions">Enter this token in the Universal Presenter Remote app on the presenting device</string>
    <string name="title_activity_control">Back</string>
    <string name="action_settings">Settings</string>
    <string name="loginLogoAlt">UPR Logo</string>
    <string name="defaultToken">...</string>
    <string name="defaultButtonTitle">Connecting...</string>
    <string name="title_activity_about">About UPR</string>
    <string name="nextButtonAlt">Next Slide</string>
    <string name="backButtonAlt">Back Slide</string>
    <string name="aboutLogoAlt">UPR Logo</string>
    <string name="aboutDescription">Welcome and thank you for choosing Universal Presenter Remote! Setup is a snap and you will be presenting in no time. All you need to do is download this Universal Presenter Remote application on the presenting computer and controlling device. Instructions for downloading can be found on universalpresenterremote.com.

Once both applications have been downloaded, open both and find the unique token on the device that will be used as the remote. Enter this token on the computer that will be running the presentation and click the button labeled "Begin". This will allow you to click the begin button the remote. All you need to do now is click connect on the computer, open the presentation and start presenting. You can now control your presentation from another device!</string>
    <string name="mediaButton">Play Media</string>
    <string name="nextButton">Next Slide</string>
    <string name="previousButton">Previous Slide</string>
    <string name="instructionButton">Instructions</string>
    <string name="goToWebsite">Go to UPR Website</string>

</resources>
