<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dbztech.universalpresenterremote.upr.LoginActivity"
    android:background="@color/DarkPurple">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inctructionButton"
            android:id="@+id/instructionButton"
            android:layout_gravity="center_horizontal"
            android:onClick="openInstructions" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:id="@+id/loginLogo"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/whitelogo"
            android:contentDescription="@string/loginLogoAlt"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_instructions"
            android:id="@+id/loginInstructions"
            android:textAlignment="center"
            android:gravity="center"
            android:paddingTop="10dip" />

        <TextView
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/defaultToken"
            android:id="@+id/loginToken"
            android:layout_gravity="center_horizontal"
            android:textSize="40dip"
            android:textIsSelectable="false"
            android:paddingTop="10dip"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultButtonTitle"
            android:id="@+id/connectButton"
            android:layout_gravity="center_horizontal"
            android:onClick="sendMessage"
            android:enabled="false"
            android:layout_marginBottom="20dp" />
    </LinearLayout>
</RelativeLayout>
