<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dbztech.universalpresenterremote.upr.ControlActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mediaButton"
            android:id="@+id/mediaButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textSize="30dp"
            android:onClick="playMedia" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nextButton"
            android:id="@+id/nextButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textSize="30dp"
            android:onClick="slideUp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/previousButton"
            android:id="@+id/previousButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textSize="30dp"
            android:onClick="slideDown" />

    </LinearLayout>
</RelativeLayout>
